# ada-lzma

./: .gitignore  LICENSE  Makefile  Makefile.conf.in  Makefile.in  NEWS  NEWS.md  README  README.md  alire.toml  configure  configure.ac  lzma.gpr.in  lzma_config.gpr  lzmada.gpr  lzmada.gpr.in  samples.gpr
.alire/: lzma_config.gpr  lzmada.gpr
debian/: ada_libraries  changelog  control  copyright  rules
distrib/: lzma.gpr
samples/: alire.toml  compress_easy.adb  decompress.adb  samples.gpr
src/: lzma-base.ads  lzma-block.ads  lzma-check.ads  lzma-container.ads  lzma-filter.ads  lzma-streamflags.ads  lzma-vli.ads  lzma.ads  lzma_lzma_h.ads
support/: lzma.sed  mk-lzma.sh
win32/: README.md
